wp-content/themes/seymour-new/style.css
/* ... */
.nav__mobile-wrapper {
  padding-top: 136px;
}

.nav__mobile-wrapper p {
  padding-bottom: 24px;
}

.nav__mobile-wrapper .nav__title {
  color: #c0bcb7;
  opacity: 70%;
}
.nav__mobile-wrapper .nav__item {
  color: #222222;
  font-size: 20px;
}

.nav__mobile-wrapper .nav__item:hover {
  text-decoration: underline;
}

.intro__wrapper {
  padding: 144px 60px;
}

.splide-gallery img {
  aspect-ratio: 1 / 1;
  object-fit: cover;
}

/* MOBILE */
@media (max-width: 767px) {
  h1 {
    font-size: 42px;
  }
  h2 {
    font-size: 36px;
  }

  .pl-xs-6 {
    padding-left: 24px;
  }

  .intro__wrapper {
    padding: 40px 24px;
  }

  .home__sticky-address {
    display: none;
  }

  .cta__wrapper .d-flex {
    flex-direction: column;
    gap: 16px;
    align-items: center;
  }
  .cta__wrapper .d-flex a {
    width: 55%;
  }
  .room__type-wrapper {
    padding-bottom: 80px;
  }
  .room__type-wrapper .room__type-discover {
    display: none;
  }

  .home__welcome-right {
    height: 375px;
    margin-bottom: -6rem;
  }

  .home__welcome-right .home__welcome-right-second {
    width: 215px;
    height: 221px;
    position: absolute;
    left: 0;
    top: 70%;
    transform: translate(-100px, 0);
  }

  .home__localslider-wrapper .splide__slide {
    width: 271px;
    margin: 0 1rem;
  }

  .home__welcome-right .home__welcome-right-second .btn__arrow {
    flex-direction: column;
    transform: translate(0, 0);
    align-items: flex-start !important;
  }

  .home__welcome-right .home__welcome-right-second .btn__arrow img {
    width: 100px;
  }

  .home__welcome-right .home__welcome-right-second img {
    width: 100%;
  }

  .home__banner-wrapper {
    height: auto;
  }
  .home__banner .splide {
    padding: 0 !important;
  }

  .home__subtitle {
    font-size: 16px;
    padding-right: 0rem;
    text-align: center;
    padding: 0 4rem;
    padding-top: 1rem;
  }
  .home__comment {
    display: flex;
    flex-direction: column;
    gap: 40px;
  }
  .home__comment .splide__track ul li p {
    font-size: 16px !important;
  }

  .room__type-right .room__type-title {
    left: 0;
    transform: translate(0%, 0px);
    padding: 0px 24px 24px 0px;
  }
  .room__type-left .room__type-title {
    right: 0;
    transform: translate(0%, 0px);
    padding: 0px 0px 24px 24px;
  }
  .room__type-wrapper .room__type-title h2 {
    font-size: 32px;
  }

  .convention__wrapper {
    padding-bottom: 3rem;
  }
  .convention__wrapper h3 {
    font-size: 24px;
    padding: 1rem 0;
  }

  .splide-gallery .splide__slide {
    padding: 0;
  }
  .splide-testominal .splide__list .splide__slide > div {
    margin: 0;
  }

  /* LOCATION */
  .location__title div:first-child {
    display: block;
    padding-top: 80px;
  }
  .location__title section {
    display: none;
    padding: 80px 0 0 0 !important;
  }
  .location__nav-wrapper {
    padding-bottom: 14px;
    box-sizing: border-box;
    margin-bottom: 0;
  }
  .location__map-wrapper iframe {
    height: 250px;
  }

  .location__map-wrapper {
    padding: 0 24px;
  }
  .location__map-wrapper img {
    border-top: 1px solid #222222;
    height: 250px;
  }

  .location__map-popup {
    position: unset;
    padding: 48px 40px;
  }

  .location__map-popup h3 {
    font-size: 24px;
    font-weight: 400 !important;
    padding-bottom: 24px;
  }

  .location__nav-wrapper .location__nav-item {
    font-size: 16px;
  }

  .cta__wrapper {
    padding: 80px 0;
  }

  .local__gallery-wrapper .row > div p {
    display: none;
  }
  .local__gallery-wrapper .row div:not(:last-child) {
    padding-bottom: 40px;
  }

  /* FACILITITES */
  .facilities__group-wrapper {
    text-align: left;
  }
  .facilities__group-wrapper .facilities__group-title {
    font-weight: 400 !important;
  }
  .facility__description-wrapper p {
    font-size: 16px !important;
  }

  /* LOCAL ATTRACTION */
  .local__header {
    padding: 0 24px !important;
  }

  .local__gallery-wrapper h3 {
    font-size: 20px;
    font-weight: 300;
  }
  .book__popup-wraper {
    padding: 48px 24px;
  }

  .local__gallery-wrapper .row div:not(:last-child) {
    padding-bottom: 60px;
  }
  /* ACCOMMODATION */
  .slider__title {
    width: 57vw;
    height: 10vw;
  }
  .slider__title h2 {
    font-size: 24px;
    padding: 0 !important;
    margin: 0 !important;
  }
  .accommodation__sticky-bookNow {
    display: block;
    position: fixed;
    right: 50%;
    bottom: 47px;
    transform: translateX(50%);
    z-index: 8;
  }
  .accommodation__sticky-bookNow .tol_no p {
    padding: 15px 35px;
  }
  .main__banner_info-button.flex-button .tol_no {
    margin: 0 !important;
  }
  /* END ACCOMMODATION */

  /* Footer */
  .copyright {
    display: none;
  }
  .copyright__mobile {
    display: block;
  }
  /* End Footer */
}

/* End How to book */
.font12 {
  font-size: 12px;
}

.uppercase {
  text-transform: uppercase;
}

.clear {
  clear: both;
}

.div-center {
  display: table;
  margin: 0 auto;
}

.num-font {
  font-family: Arial;
}

.mytable {
  display: flex;
  justify-content: space-between;
  width: 100%;
  height: 100%;
}

.flex-button {
  display: flex;
  gap: 20px;
  align-items: center;
}

.flex-button .un-danger {
  color: #b52804 !important;
  transition: 0.3s;
}
.flex-button .un-danger a {
  color: #b52804 !important;
}
.un-danger:hover {
  background-color: #edded9;
}
.flex-button .danger {
  background-color: #b52804;
  transition: 0.3s;
}
.danger:hover {
  border-color: #222222;
}
.danger:hover p {
  background-color: #222222;
  color: #fff;
}
.fixed-table-layout {
  table-layout: fixed;
}

.table-cell {
  display: table-cell;
}

.va-middle {
  vertical-align: middle;
}

.va-top {
  vertical-align: top;
}

.va-bottom {
  vertical-align: bottom;
}

.static {
  position: static;
}

.relative {
  position: relative;
}

.absolute {
  position: absolute;
}

.fixed {
  position: fixed;
}

.cover {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.vspace5px {
  height: 5px;
}

.vspace10px {
  height: 10px;
}
/* ... */

